Fix theproject alignment issue

--- a/style.css
+++ b/style.css
@@ -734,11 +734,14 @@ margin-top: 40px;
 .project .project-item-inner{
   border: 6px solid var(--bg-black-100);
   border-radius: 10px;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   cursor: pointer;
 }
 .project .project-item-inner .project-img img{
   width: 100%;
+  height: 100%;
   display: block;
   /* height: 200px; */
 }
